# my-repo-name

./: .gitignore  CLAUDE.md  NOTES.md  PROJECT_NOTES.md  main.py  manage.py  pyproject.toml
accounts/: models.py
accounts/migrations/: 0001_initial.py
accounts/tests/: factories.py
archery_logger/: asgi.py  settings.py  urls.py  wsgi.py
equipment/: forms.py  models.py  urls.py  views.py
equipment/migrations/: 0001_initial.py  0002_remove_bow_owner.py  0003_bow_length_inches.py
equipment/tests/: factories.py  test_forms.py  test_models.py  test_views.py
plotting/: apps.py
preferences/: forms.py  models.py  urls.py  views.py
preferences/migrations/: 0001_initial.py
preferences/tests/: test_views.py
sessions/: apps.py  forms.py  models.py  urls.py  views.py
sessions/migrations/: 0001_initial.py  0002_alter_session_bow.py  0003_session_next_focus.py  0004_rename_arrow_count_add_scoring_fields.py  0005_session_fatigue_session_nutrition_and_more.py
sessions/tests/: factories.py  test_forms.py  test_models.py  test_views.py
static/css/: main.css
static/js/: modals.js  session-form.js
templates/: base.html
templates/equipment/: mybows.html
templates/preferences/: mysettings.html
templates/sessions/: home.html  mysessions.html
